Create call to create_alt_text/html_title() and store_alt_text/html_stacked_bar_chart() functions for stacked bar charts in generic metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -182,11 +182,15 @@
     "    df_sensed_tc_sensed = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_confirmed_tc.empty:\n",
     "            plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_confirmed_tc is empty.\")\n",
     "    else:\n",
@@ -196,6 +200,8 @@
     "        df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        if not df_sensed_tc.empty:\n",
     "            plot_stacked_bar_chart(df_sensed_tc,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
@@ -230,6 +236,8 @@
     "    df_sensed_tc_u80 = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col, \"Labeled by user\\n (Confirmed trips)\")\n",
@@ -237,6 +245,8 @@
     "        if not df_confirmed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "            plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_confirmed_tc_u80 is empty.\")\n",
     "    else:\n",
@@ -248,6 +258,8 @@
     "        if not df_sensed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "            plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
@@ -281,6 +293,8 @@
     "    df_total_trip_commute = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
@@ -297,6 +311,9 @@
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
     "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    alt_html = store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name, 'a')\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name, 'a')\n",
+    "    \n",
     "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", ax, colors_combined)\n",
     "\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
@@ -328,11 +345,15 @@
     "    df_sensed_dist = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user\\n (Trip distance)\")\n",
     "        if not df_confirm_dist.empty:\n",
     "            plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_confirm_dist is empty.\")\n",
     "    else:\n",
@@ -342,6 +363,8 @@
     "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "        if not df_sensed_dist.empty:\n",
     "            plot_stacked_bar_chart(df_sensed_dist,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_sensed_dist is empty.\")\n",
     "    else:\n",
@@ -376,11 +399,15 @@
     "    df_sensed_dist_land = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower, \"Labeled by user\\n (Trip distance - Land)\")\n",
     "        if not df_confirm_dist_land.empty:\n",
     "            plot_stacked_bar_chart(df_confirm_dist_land, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_confirm_dist_land is empty.\")\n",
     "    else:\n",
@@ -390,6 +417,8 @@
     "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "        if not df_sensed_dist_land.empty:\n",
     "            plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_sensed_dist_land is empty.\")\n",
     "    else:\n",
@@ -423,12 +452,16 @@
     "    df_purpose_trip = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_purpose_trip.empty:\n",
     "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
     "            plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", ax, colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
