--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -194,13 +194,16 @@
     "    df_purpose_trip_eb = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not data_eb.empty:\n",
     "        df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
     "        if not df_purpose_trip_eb.empty:\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "            all_tp_data_frames_expanded.append(df_purpose_trip_eb_expanded)\n",
     "            plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_purpose_trip_eb is empty.\")\n",
     "    else:\n",
@@ -234,13 +237,16 @@
     "    df_replaced_dist = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not data_eb.empty:\n",
     "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
-    "            all_data_frames_expanded.append(df_replaced_dist_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "            plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_replaced_dist is empty.\")\n",
     "    else:\n",
@@ -274,13 +280,16 @@
     "    df_replaced_tc = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    create_alt_html_title(plot_title, file_name, 'w')\n",
+    "    create_alt_text_title(plot_title, file_name, 'w')\n",
     "\n",
     "    if not data_eb.empty:\n",
     "        df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
     "        if not df_replaced_tc.empty:\n",
-    "            all_data_frames_expanded.append(df_replaced_tc_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "            plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name, 'a')\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name, 'a')\n",
     "        else:\n",
     "            print(\"df_replaced_tc is empty.\")\n",
     "    else:\n",
