--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -179,18 +179,23 @@
     "\n",
     "try:\n",
     "    df_confirmed_tc = pd.DataFrame()\n",
-    "    df_sensed_tc_sensed = pd.DataFrame()\n",
+    "    df_sensed_tc = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "\n",
+    "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
+    "    else:\n",
+    "        missing_text = \"\"\n",
+    "\n",
+    "    create_alt_html_title(plot_title, file_name, missing_text)\n",
+    "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_confirmed_tc.empty:\n",
-    "            plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc is empty.\")\n",
     "    else:\n",
@@ -199,14 +204,15 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        if not df_sensed_tc.empty:\n",
-    "            plot_stacked_bar_chart(df_sensed_tc,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
     "\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc, \"Sensed Trip\", ax[1], colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
@@ -236,17 +242,22 @@
     "    df_sensed_tc_u80 = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "\n",
+    "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
+    "    else:\n",
+    "        missing_text = \"\"\n",
+    "\n",
+    "    create_alt_html_title(plot_title, file_name, missing_text)\n",
+    "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col, \"Labeled by user\\n (Confirmed trips)\")\n",
     "        u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "        if not df_confirmed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
-    "            plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc_u80 is empty.\")\n",
     "    else:\n",
@@ -257,14 +268,15 @@
     "        u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "        if not df_sensed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
-    "            plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", ax[1], colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -293,8 +305,8 @@
     "    df_total_trip_commute = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "    create_alt_html_title(plot_title, file_name)\n",
+    "    create_alt_text_title(plot_title, file_name)\n",
     "\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
@@ -302,20 +314,19 @@
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
-    "\n",
+    "    \n",
     "    if not expanded_ct.empty:\n",
+    "        commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
     "        plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "\n",
-    "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "        labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
+    "        values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
-    "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    alt_html = store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name, 'a')\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name, 'a')\n",
+    "        df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        alt_html = store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name)\n",
+    "        alt_text = store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name)\n",
     "    \n",
     "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", ax, colors_combined)\n",
-    "\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -345,15 +356,19 @@
     "    df_sensed_dist = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "\n",
+    "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
+    "    else:\n",
+    "        missing_text = \"\"\n",
+    "    create_alt_html_title(plot_title, file_name, missing_text)\n",
+    "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user\\n (Trip distance)\")\n",
     "        if not df_confirm_dist.empty:\n",
-    "            plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_confirm_dist is empty.\")\n",
     "    else:\n",
@@ -362,14 +377,15 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "        if not df_sensed_dist.empty:\n",
-    "            plot_stacked_bar_chart(df_sensed_dist,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_sensed_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
+    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist,  \"Sensed Trip\", ax[1], colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -399,15 +415,19 @@
     "    df_sensed_dist_land = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "\n",
+    "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
+    "    else:\n",
+    "        missing_text = \"\"\n",
+    "    create_alt_html_title(plot_title, file_name, missing_text)\n",
+    "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower, \"Labeled by user\\n (Trip distance - Land)\")\n",
     "        if not df_confirm_dist_land.empty:\n",
-    "            plot_stacked_bar_chart(df_confirm_dist_land, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_confirm_dist_land is empty.\")\n",
     "    else:\n",
@@ -416,14 +436,15 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "        if not df_sensed_dist_land.empty:\n",
-    "            plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_sensed_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
+    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", ax[1], colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -452,21 +473,26 @@
     "    df_purpose_trip = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    create_alt_html_title(plot_title, file_name, 'w')\n",
-    "    create_alt_text_title(plot_title, file_name, 'w')\n",
+    "\n",
+    "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
+    "    else:\n",
+    "        missing_text = \"\"\n",
+    "    create_alt_html_title(plot_title, file_name, missing_text)\n",
+    "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_purpose_trip.empty:\n",
     "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
-    "            plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", ax, colors_combined)\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, 'a')\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name, 'a')\n",
+    "            alt_html = store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name)\n",
+    "            alt_text = store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name)\n",
     "        else:\n",
     "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
+    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", ax, colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -708,6 +734,22 @@
     "    generate_missing_plot(plot_title_no_quality,debug_df_sensed,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, plot_title_no_quality)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18279f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b58bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
