Update the plot title when none of the dataframe is available for generic_metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -180,12 +180,14 @@
     "try:\n",
     "    df_confirmed_tc = pd.DataFrame()\n",
     "    df_sensed_tc = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "\n",
     "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        plot_title = plot_title_no_quality\n",
     "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
     "    else:\n",
+    "        plot_title += \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "        missing_text = \"\"\n",
     "\n",
     "    create_alt_html_title(plot_title, file_name, missing_text)\n",
@@ -354,13 +356,15 @@
     "try:\n",
     "    df_confirm_dist = pd.DataFrame()\n",
     "    df_sensed_dist = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "\n",
     "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
+    "        plot_title = plot_title_no_quality\n",
     "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
     "    else:\n",
     "        missing_text = \"\"\n",
+    "        plot_title += \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name, missing_text)\n",
     "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
@@ -413,13 +417,14 @@
     "try:\n",
     "    df_confirm_dist_land = pd.DataFrame()\n",
     "    df_sensed_dist_land = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "\n",
     "    if (expanded_ct.empty and expanded_ct_sensed.empty):\n",
     "        missing_text = \"No data available for Confirmed Trips. \\n No data available for Sensed Trips.\"\n",
     "    else:\n",
     "        missing_text = \"\"\n",
+    "        plot_title += \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name, missing_text)\n",
     "    create_alt_text_title(plot_title, file_name, missing_text)\n",
     "\n",
