Removed scaffolding dependency; updated README

--- a/replacement_mode_modeling/01_extract_db_data.ipynb
+++ b/replacement_mode_modeling/01_extract_db_data.ipynb
@@ -206,10 +206,6 @@
     "    }\n",
     "}\n",
     "\n",
-    "SENSED_SECTION_DICT = {\n",
-    "    \"openpath_prod_mm_masscec\": {'AIR_OR_HSR', 'BICYCLING', 'BUS', 'CAR', 'LIGHT_RAIL', 'SUBWAY', 'TRAIN', 'UNKNOWN', 'WALKING'}\n",
-    "}\n",
-    "\n",
     "SURVEY_DATA_DICT = {\n",
     "    \"Stage_database\": {\n",
     "        \"Unique User ID (auto-filled, do not edit)\": \"user_id\",\n",
@@ -477,28 +473,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if CURRENT_DB != \"Stage_database\":\n",
+    "## Source: scaffolding.py\n",
     "\n",
-    "    ## Source: scaffolding.py\n",
+    "uuid_df = pd.json_normalize(list(edb.get_uuid_db().find()))\n",
     "\n",
-    "    uuid_df = pd.json_normalize(list(edb.get_uuid_db().find()))\n",
+    "if not INCLUDE_TEST_USERS:\n",
+    "    uuid_df = uuid_df.loc[~uuid_df.user_email.str.contains('_test_'), :]\n",
     "\n",
-    "    if not INCLUDE_TEST_USERS:\n",
-    "        uuid_df = uuid_df.loc[~uuid_df.user_email.str.contains('_test_'), :]\n",
+    "filtered = uuid_df.uuid.unique()\n",
     "\n",
-    "    filtered = uuid_df.uuid.unique()\n",
+    "agg = esta.TimeSeries.get_aggregate_time_series()\n",
+    "all_ct = agg.get_data_df(\"analysis/confirmed_trip\", None)\n",
     "\n",
-    "    agg = esta.TimeSeries.get_aggregate_time_series()\n",
-    "    all_ct = agg.get_data_df(\"analysis/confirmed_trip\", None)\n",
+    "print(f\"Before filtering, length={len(all_ct)}\")\n",
+    "participant_ct_df = all_ct.loc[all_ct.user_id.isin(filtered), :]\n",
+    "print(f\"After filtering, length={len(participant_ct_df)}\")\n",
     "\n",
-    "    print(f\"Before filtering, length={len(all_ct)}\")\n",
-    "    participant_ct_df = all_ct.loc[all_ct.user_id.isin(filtered), :]\n",
-    "    print(f\"After filtering, length={len(participant_ct_df)}\")\n",
-    "\n",
-    "    expanded_ct = expand_userinputs(participant_ct_df)\n",
-    "    expanded_ct = data_quality_check(expanded_ct)\n",
-    "    print(expanded_ct.columns.tolist())\n",
-    "    expanded_ct['replaced_mode'] = expanded_ct['replaced_mode'].fillna('Unknown')"
+    "expanded_ct = expand_userinputs(participant_ct_df)\n",
+    "expanded_ct = data_quality_check(expanded_ct)\n",
+    "print(expanded_ct.columns.tolist())\n",
+    "expanded_ct['replaced_mode'] = expanded_ct['replaced_mode'].fillna('Unknown')"
    ]
   },
   {
@@ -510,27 +504,25 @@
    "source": [
     "# # Additional preprocessing for replaced mode (if any)\n",
     "\n",
-    "if CURRENT_DB != \"Stage_database\":\n",
+    "mode_counts = expanded_ct['replaced_mode'].value_counts()\n",
+    "drop_modes = mode_counts[mode_counts == 1].index.tolist()\n",
     "\n",
-    "    mode_counts = expanded_ct['replaced_mode'].value_counts()\n",
-    "    drop_modes = mode_counts[mode_counts == 1].index.tolist()\n",
+    "expanded_ct.drop(\n",
+    "    index=expanded_ct.loc[expanded_ct.replaced_mode.isin(drop_modes)].index,\n",
+    "    inplace=True\n",
+    ")\n",
     "\n",
-    "    expanded_ct.drop(\n",
-    "        index=expanded_ct.loc[expanded_ct.replaced_mode.isin(drop_modes)].index,\n",
-    "        inplace=True\n",
-    "    )\n",
+    "# Additional modes to drop.\n",
+    "expanded_ct.drop(\n",
+    "    index=expanded_ct.loc[expanded_ct.replaced_mode.isin(\n",
+    "        # Remove all rows with air, boat, or weird answers.\n",
+    "        ['houseboat', 'gondola', 'airline_flight', 'aircraft', 'zoo', 'air',\n",
+    "         'airplane', 'boat', 'flight', 'plane', 'meal', 'lunch']\n",
+    "    )].index,\n",
+    "    inplace=True\n",
+    ")\n",
     "\n",
-    "    # Additional modes to drop.\n",
-    "    expanded_ct.drop(\n",
-    "        index=expanded_ct.loc[expanded_ct.replaced_mode.isin(\n",
-    "            # Remove all rows with air, boat, or weird answers.\n",
-    "            ['houseboat', 'gondola', 'airline_flight', 'aircraft', 'zoo', 'air',\n",
-    "             'airplane', 'boat', 'flight', 'plane', 'meal', 'lunch']\n",
-    "        )].index,\n",
-    "        inplace=True\n",
-    "    )\n",
-    "    \n",
-    "    expanded_ct.replaced_mode = expanded_ct.replaced_mode.apply(lambda x: REPLACED_MODE_DICT[CURRENT_DB][x])"
+    "expanded_ct.replaced_mode = expanded_ct.replaced_mode.apply(lambda x: REPLACED_MODE_DICT[CURRENT_DB][x])"
    ]
   },
   {
@@ -590,8 +582,56 @@
     "        survey_data = pd.concat([survey_data, v], axis=0, ignore_index=True)\n",
     "else:\n",
     "    # Read the demographics.\n",
-    "    survey_data = pd.read_csv('./viz_scripts/Can Do Colorado eBike Program - en.csv')\n",
+    "    # Ensure that you have access to this survey file and that it is placed in the given destination.\n",
+    "    survey_data = pd.read_csv('../viz_scripts/Can Do Colorado eBike Program - en.csv')\n",
     "    survey_data.rename(columns={'Unique User ID (auto-filled, do not edit)': 'user_id'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aaedf66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_section_durations(confirmed_trips: pd.DataFrame):\n",
+    "    \n",
+    "    import pandarallel\n",
+    "\n",
+    "    # Initialize the parallel processing.\n",
+    "    pandarallel.initialize(progress_bar=False)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Extract section-wise durations from trips for every trips.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # the inner function has access to these variables.\n",
+    "    primary_key = 'analysis/inferred_section'\n",
+    "    fallback_key = 'analysis/cleaned_section'\n",
+    "\n",
+    "    def get_durations(user_id, trip_id):\n",
+    "\n",
+    "        inferred_sections = esdt.get_sections_for_trip(key = primary_key,\n",
+    "            user_id = user_id, trip_id = trip_id)\n",
+    "\n",
+    "        if inferred_sections and len(inferred_sections) > 0:\n",
+    "            return [x.data.duration for x in inferred_sections]\n",
+    "        \n",
+    "        print(\"Falling back to confirmed trips...\")\n",
+    "\n",
+    "        cleaned_sections = esdt.get_sections_for_trip(key = fallback_key,\n",
+    "            user_id = user_id, trip_id = trip_id)\n",
+    "    \n",
+    "        if cleaned_sections and len(cleaned_sections) > 0:\n",
+    "            return [x.data.duration for x in cleaned_sections]\n",
+    "\n",
+    "        return []\n",
+    "\n",
+    "    confirmed_trips['section_durations'] = confirmed_trips.parallel_apply(\n",
+    "        lambda x: get_durations(x.user_id, x.cleaned_trip), axis=1\n",
+    "    )\n",
+    "\n",
+    "    return confirmed_trips"
    ]
   },
   {
@@ -611,9 +651,7 @@
     "    else:\n",
     "        ## NOTE: Run this cell only if the cached CSV is not already available. It will take a LOT of time.\n",
     "        ## Benchmark timing: ~12 hours on a MacBook Pro (2017 model) with pandarallel, 4 workers.\n",
-    "        \n",
-    "        importlib.reload(scaffolding)\n",
-    "        expanded_ct = scaffolding.get_section_durations(expanded_ct)\n",
+    "        expanded_ct = get_section_durations(expanded_ct)\n",
     "        expanded_ct.to_csv('./data/cached_allceo_data.csv', index=False)"
    ]
   },
