--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -191,24 +191,14 @@
     "file_name= f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    df_purpose_trip_eb = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "\n",
-    "    if not data_eb.empty:\n",
-    "        df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
-    "        if not df_purpose_trip_eb.empty:\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
-    "        else:\n",
-    "            print(\"df_purpose_trip_eb is empty.\")\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
-    "\n",
     "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
+    "    store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -234,21 +224,14 @@
     "file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    df_replaced_dist = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
-    "        plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "        alt_html = store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
-    "        alt_text = store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
-    "\n",
     "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
+    "    store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -274,24 +257,14 @@
     "file_name = f'ntrips_{mode_of_interest}_total{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    df_replaced_tc = pd.DataFrame()\n",
-    "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
-    "        if not df_replaced_tc.empty:\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "            alt_html = store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
-    "            alt_text = store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
-    "        else:\n",
-    "            print(\"df_replaced_tc is empty.\")\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
-    "\n",
     "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
+    "    store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
