Remove Labeled/Sensed by ... message from call to process_*() and use it in store_() and plot_(). in generic_metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -179,17 +179,17 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "    df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm')\n",
+    "    df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode')\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name)\n",
-    "    plot_stacked_bar_chart(df_sensed_tc, \"Sensed Trip\", ax[1], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "    plot_stacked_bar_chart(df_sensed_tc, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
@@ -217,19 +217,19 @@
     "try:\n",
     "    plot_title = plot_title_no_quality\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', distance_col, \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "    df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col)\n",
+    "    df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', distance_col)\n",
     "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "    plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    store_alt_html_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name)\n",
-    "    store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_combined, )\n",
+    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -269,13 +269,13 @@
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
-    "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name)\n",
-    "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name,\"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name,\"Labeled by user\\n (Confirmed trips)\")\n",
+    "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_combined)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -302,17 +302,17 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user\\n (Trip distance)\")\n",
-    "    df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")  \n",
+    "    df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower)\n",
+    "    df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower)  \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name)\n",
-    "    plot_stacked_bar_chart(df_sensed_dist,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", \"Labeled by user\\n (Trip distance)\", ax[0], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
+    "    plot_stacked_bar_chart(df_sensed_dist, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Overall)\", ax[1], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -339,17 +339,17 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower, \"Labeled by user\\n (Trip distance - Land)\")\n",
-    "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower)\n",
+    "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Confirmed Trip\", ax[0], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name)\n",
-    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", ax[1], colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Labeled by user\\n (Trip distance - Land)\", \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
+    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -375,13 +375,13 @@
     "file_name = f\"ntrips_purpose{file_suffix}\"\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose')\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", ax, colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -641,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
