Remove Labeled/Sensed by ... message from call to process_*() and use it in store_() and plot_(). in mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -192,13 +192,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
+    "    df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose')\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
+    "    store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -225,13 +225,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "    df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "    store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -258,13 +258,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
+    "    df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode')\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
-    "    store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
-    "    store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name)\n",
+    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_combined)\n",
+    "    store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
+    "    store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
