--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -219,8 +219,8 @@
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col)\n",
     "    df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', distance_col)\n",
-    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
-    "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
+    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users) if not expanded_ct.empty else \"\"\n",
+    "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label, include_test_users) if not expanded_ct_sensed.empty else \"\"\n",
     "    plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
@@ -263,12 +263,9 @@
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
-    "\n",
-    "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "\n",
+    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
+    "    labels_mc_commute = expanded_ct.query(trip_purpose_query)['Mode_confirm'].value_counts(dropna=True).keys().tolist() if not expanded_ct.empty and 'Mode_confirm' in expanded_ct.columns else []\n",
+    "    values_mc_commute = expanded_ct.query(trip_purpose_query)['Mode_confirm'].value_counts(dropna=True).tolist() if not expanded_ct.empty and 'Mode_confirm' in expanded_ct.columns else []\n",
     "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
@@ -339,8 +336,8 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower)\n",
-    "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower)\n",
+    "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"] if 'Mode_confirm' in expanded_ct.columns else pd.DataFrame(), 'Mode_confirm', distance_col, label_units_lower)\n",
+    "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"] if 'primary_mode' in expanded_ct_sensed.columns else pd.DataFrame(), 'primary_mode', distance_col, label_units_lower)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
